lab2/sytax0.output
Terminals unused in grammar

   NULLPTR
   STR
   BOOL
   SPACE
   AERROR
   EOL


State 108 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifire ExtDecList SEMI
    5       | Specifire SEMI
    6       | Specifire FunDec Compst

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifire: TYPE
   10          | StructSpecifire

   11 StructSpecifire: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifire VarDec

   23 Compst: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | Compst
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | %empty

   34 Def: Specifire DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | NOT Exp
   50    | ID LP Args RP
   51    | ID LP RP
   52    | Exp LB Exp RB
   53    | Exp DOT ID
   54    | ID
   55    | INT
   56    | INT8
   57    | INT16
   58    | FLOAT

   59 Args: Exp COMMA Args
   60     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 17 55
INT8 (259) 56
INT16 (260) 57
FLOAT (261) 58
NULLPTR (262)
STR (263)
BOOL (264)
TYPE (265) 9
STRUCT (266) 11 12
RETURN (267) 28
IF (268) 29 30
ELSE (269) 30
WHILE (270) 31
ID (271) 13 15 16 18 19 50 51 53 54
SPACE (272)
SEMI (273) 4 5 26 28 34
COMMA (274) 8 20 36 59
ASSIGNOP (275) 38 39
RELOP (276) 42
PLUS (277) 43
MINUS (278) 44 48
STAR (279) 45
DIV (280) 46
AND (281) 40
OR (282) 41
DOT (283) 53
NOT (284) 49
LP (285) 18 19 29 30 31 47 50 51
RP (286) 18 19 29 30 31 47 50 51
LB (287) 17 52
RB (288) 17 52
LC (289) 11 23
RC (290) 11 23
AERROR (291)
EOL (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Program (39)
    on left: 1, on right: 0
ExtDefList (40)
    on left: 2 3, on right: 1 2
ExtDef (41)
    on left: 4 5 6, on right: 2
ExtDecList (42)
    on left: 7 8, on right: 4 8
Specifire (43)
    on left: 9 10, on right: 4 5 6 22 34
StructSpecifire (44)
    on left: 11 12, on right: 10
OptTag (45)
    on left: 13 14, on right: 11
Tag (46)
    on left: 15, on right: 12
VarDec (47)
    on left: 16 17, on right: 7 8 17 22 37 38
FunDec (48)
    on left: 18 19, on right: 6
VarList (49)
    on left: 20 21, on right: 18 20
ParamDec (50)
    on left: 22, on right: 20 21
Compst (51)
    on left: 23, on right: 6 27
StmtList (52)
    on left: 24 25, on right: 23 24
Stmt (53)
    on left: 26 27 28 29 30 31, on right: 24 29 30 31
DefList (54)
    on left: 32 33, on right: 11 23 32
Def (55)
    on left: 34, on right: 32
DecList (56)
    on left: 35 36, on right: 34 36
Dec (57)
    on left: 37 38, on right: 35 36
Exp (58)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58, on right: 26 28 29 30 31 38 39 40 41 42 43 44 45 46 47 48
    49 52 53 59 60
Args (59)
    on left: 59 60, on right: 50 59


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifire        go to state 6
    StructSpecifire  go to state 7


State 1

    9 Specifire: TYPE .

    $default  reduce using rule 9 (Specifire)


State 2

   11 StructSpecifire: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifire        go to state 6
    StructSpecifire  go to state 7


State 6

    4 ExtDef: Specifire . ExtDecList SEMI
    5       | Specifire . SEMI
    6       | Specifire . FunDec Compst

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifire: StructSpecifire .

    $default  reduce using rule 10 (Specifire)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifire: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifire: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifire)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifire SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifire ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifire FunDec . Compst

    LC  shift, and go to state 23

    Compst  go to state 24


State 18

   11 StructSpecifire: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifire        go to state 25
    StructSpecifire  go to state 7
    DefList          go to state 26
    Def              go to state 27


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 28

    Specifire        go to state 29
    StructSpecifire  go to state 7
    VarList          go to state 30
    ParamDec         go to state 31


State 20

    4 ExtDef: Specifire ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  go to state 33
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 23

   23 Compst: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifire        go to state 25
    StructSpecifire  go to state 7
    DefList          go to state 35
    Def              go to state 27


State 24

    6 ExtDef: Specifire FunDec Compst .

    $default  reduce using rule 6 (ExtDef)


State 25

   34 Def: Specifire . DecList SEMI

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


State 26

   11 StructSpecifire: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 39


State 27

   32 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 33 (DefList)

    Specifire        go to state 25
    StructSpecifire  go to state 7
    DefList          go to state 40
    Def              go to state 27


State 28

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 29

   22 ParamDec: Specifire . VarDec

    ID  shift, and go to state 32

    VarDec  go to state 41


State 30

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 42


State 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 43

    $default  reduce using rule 21 (VarList)


State 32

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 33

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 34

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 44


State 35

   23 Compst: LC DefList . StmtList RC

    INT     shift, and go to state 45
    INT8    shift, and go to state 46
    INT16   shift, and go to state 47
    FLOAT   shift, and go to state 48
    RETURN  shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    Compst    go to state 56
    StmtList  go to state 57
    Stmt      go to state 58
    Exp       go to state 59


State 36

   17 VarDec: VarDec . LB INT RB
   37 Dec: VarDec .
   38    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 22

    $default  reduce using rule 37 (Dec)


State 37

   34 Def: Specifire DecList . SEMI

    SEMI  shift, and go to state 61


State 38

   35 DecList: Dec .
   36        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 35 (DecList)


State 39

   11 StructSpecifire: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifire)


State 40

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 41

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifire VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 42

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 43

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifire        go to state 29
    StructSpecifire  go to state 7
    VarList          go to state 63
    ParamDec         go to state 31


State 44

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 45

   55 Exp: INT .

    $default  reduce using rule 55 (Exp)


State 46

   56 Exp: INT8 .

    $default  reduce using rule 56 (Exp)


State 47

   57 Exp: INT16 .

    $default  reduce using rule 57 (Exp)


State 48

   58 Exp: FLOAT .

    $default  reduce using rule 58 (Exp)


State 49

   28 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 64


State 50

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 65


State 51

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 66


State 52

   50 Exp: ID . LP Args RP
   51    | ID . LP RP
   54    | ID .

    LP  shift, and go to state 67

    $default  reduce using rule 54 (Exp)


State 53

   48 Exp: MINUS . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 68


State 54

   49 Exp: NOT . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 69


State 55

   47 Exp: LP . Exp RP

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 70


State 56

   27 Stmt: Compst .

    $default  reduce using rule 27 (Stmt)


State 57

   23 Compst: LC DefList StmtList . RC

    RC  shift, and go to state 71


State 58

   24 StmtList: Stmt . StmtList

    INT     shift, and go to state 45
    INT8    shift, and go to state 46
    INT16   shift, and go to state 47
    FLOAT   shift, and go to state 48
    RETURN  shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 23

    $default  reduce using rule 25 (StmtList)

    Compst    go to state 56
    StmtList  go to state 72
    Stmt      go to state 58
    Exp       go to state 59


State 59

   26 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    SEMI      shift, and go to state 73
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 60

   38 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 84


State 61

   34 Def: Specifire DecList SEMI .

    $default  reduce using rule 34 (Def)


State 62

   36 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 85
    Dec      go to state 38


State 63

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 64

   28 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 65

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 87


State 66

   31 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 88


State 67

   50 Exp: ID LP . Args RP
   51    | ID LP . RP

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 89

    Exp   go to state 90
    Args  go to state 91


State 68

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    DOT   shift, and go to state 82
    LB    shift, and go to state 83

    $default  reduce using rule 48 (Exp)


State 69

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | NOT Exp .
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    DOT  shift, and go to state 82
    LB   shift, and go to state 83

    $default  reduce using rule 49 (Exp)


State 70

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LP Exp . RP
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 92
    LB        shift, and go to state 83


State 71

   23 Compst: LC DefList StmtList RC .

    $default  reduce using rule 23 (Compst)


State 72

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 73

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 74

   39 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 93


State 75

   42 Exp: Exp RELOP . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 94


State 76

   43 Exp: Exp PLUS . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 95


State 77

   44 Exp: Exp MINUS . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 96


State 78

   45 Exp: Exp STAR . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 97


State 79

   46 Exp: Exp DIV . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 98


State 80

   40 Exp: Exp AND . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 99


State 81

   41 Exp: Exp OR . Exp

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 100


State 82

   53 Exp: Exp DOT . ID

    ID  shift, and go to state 101


State 83

   52 Exp: Exp LB . Exp RB

    INT    shift, and go to state 45
    INT8   shift, and go to state 46
    INT16  shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 102


State 84

   38 Dec: VarDec ASSIGNOP Exp .
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83

    $default  reduce using rule 38 (Dec)


State 85

   36 DecList: Dec COMMA DecList .

    $default  reduce using rule 36 (DecList)


State 86

   28 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 87

   29 Stmt: IF LP Exp . RP Stmt
   30     | IF LP Exp . RP Stmt ELSE Stmt
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 103
    LB        shift, and go to state 83


State 88

   31 Stmt: WHILE LP Exp . RP Stmt
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 104
    LB        shift, and go to state 83


State 89

   51 Exp: ID LP RP .

    $default  reduce using rule 51 (Exp)


State 90

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   52    | Exp . LB Exp RB
   53    | Exp . DOT ID
   59 Args: Exp . COMMA Args
   60     | Exp .

    COMMA     shift, and go to state 105
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83
